# reid_investigation

./: .env.example  .gitignore  LICENSE  README.md  copilot_prompt.md  main.ipynb  plan.md  pyproject.toml  requirements.txt
archived/colab_only/: 00_download_soccernet_to_google_drive.ipynb
configs/: stage1_baseline.yaml  stage2_reid.yaml
core/: __init__.py  base_detector.py  base_reid.py  base_tracker.py
experiments/: 01_stage1_baseline.ipynb  02_stage2_standard_reid.ipynb
models/: __init__.py
models/detectors/: __init__.py  yolo_detector.py
models/reid/: __init__.py  dinov2_reid.py  osnet_reid.py
models/trackers/: __init__.py  bytetrack_tracker.py
reports/stage1/: stage1.md  stage1_metrics.csv  stage1_metrics_by_source.csv
reports/stage2/: stage2.md  stage2_grid_search.csv  stage2_metrics.csv  stage2_metrics_by_source.csv
reports/stage3/: stage3.md  stage3_latency.csv  stage3_metrics.csv
reports/stage4/: stage4.md  stage4_latency.csv  stage4_metrics.csv
scripts/: init_structure.py  kaggle_setup.py
utils/: __init__.py  config_loader.py  data_loader.py  metrics.py  video_utils.py
